# re-nfs2

./: .gitignore  CMakeLists.txt  README.md
gamesrc/: CMakeLists.txt  template.h
gamesrc/dllexports/: crt.lbc  eac.lbc  renfs2.lbc
gamesrc/eacstub/: eacstub.asm
gamesrc/nfs2/eaclib/: btreecodex.h  btreedecode.c  codex.h  dprintf.c  eac.h  gimex.h  huffcodex.h  huffdecode.c  libgimex.c  mem.c  refcodex.h  refdecode.c  sdirect.c  unbtree.c  unhuff.c  unref.c  uv.c
gamesrc/nfs2/frontend/common/: Dialog.c  Dialog.h  Feaudio.c  Feaudio.h  Fecntl.c  Fecntl.h  Fetools.c  Fetools.h  Front.c  Front.h  Loadsave.c  Loadsave.h  Mainmenu.c  Mainmenu.h  MenuCom.c  MenuCom.h  Menudata.c  Menudata.h  Menusys.c  Menusys.h  Netmenu.c  Netmenu.h  Showcase.c  Showcase.h  Statchk.c  Statchk.h  Statdisp.c  Statdisp.h  Stattool.c  Stattool.h  Textsys.c  Textsys.h  Trkstat.c  Trkstat.h
gamesrc/nfs2/frontend/pc/: Modem.c  Modem.h  ModemReg.c  ModemReg.h  Mouse.c  chat.c  chat.h  editor.c  editor.h  movilite.c  movilite.h
gamesrc/nfs2/game/common/: Horizon.c  Horizon.h  Line.c  Line.h  MathNfs.c  MathNfs.h  MinFront.c  MinFront.h  R3DCar.c  R3DCar.h  Transfmr.c  Transfmr.h  TrgSfx.c  TrgSfx.h  ai.c  ai.h  aiphysic.c  aiphysic.h  aispeeds.c  aispeeds.h  aitune.c  aitune.h  anim.c  anim.h  audioclc.c  audioclc.h  audiocmn.c  audiocmn.h  bwmem.c  bwmem.h  bworld.c  bworld.h  bworldSm.c  bworldSm.h  camera.c  camera.h  cars.c  cars.h  channel.c  channel.h  (+69 more)
gamesrc/nfs2/game/pc/: CarIO.c  CarIO.h  Force.c  Force.h  ForceDLL.c  ForceDLL.h  Sfx.c  Sfx.h  Texture.c  Texture.h  TrnfPlat.c  TrnfPlat.h  TrsProj.c  TrsProj.h  audio.c  audio.h  dash.c  dash.h  device.c  device.h  draw.c  draw.h  hrzsku.c  hrzsku.h  hud.c  hud.h  lighting.c  lighting.h  loading.c  loading.h  net.c  net.h  palette.c  palette.h  paltools.c  paltools.h  platform.c  platform.h  reduce.c  reduce.h  (+4 more)
gamesrc/renfs2/: gamedllmain.c  hookcrt.c  hookeac.c  hookinit.c  hookinit.h  hooknfs2.c  renfs2.h  trace.c
gamesrc/wc106prj/: clean.bat  clean.sh  renfs2.tgt  renfs2.wpj
hookdll/: CMakeLists.txt  funchook.cpp  funchook.h  hookdllmain.c  hookmgr.cpp  hookmgr.h  winmm_stub.c  winmm_stub.h
hookdll/dllexports/: winmm.lbc
